addons/traefik/traefik-ingressroute/traefik-dashboard/traefik-ingress-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-dashboard
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-dashboard
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
spec:
  type: ClusterIP
  selector:
    k8s-app: traefik-ingress
  ports:
    - protocol: TCP
      port: 8080
      name: admin
      targetPort: 8080
